fixing alignment for abo ut page

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ body, html {
     display: flex;
     gap: 30px;
     align-items: center;
-    justify-content: flex-start; /* Align items to the left */
+    justify-content: right; /* Align items to the left */
     margin-right: 50px; /*it was htis line"*/
 }
 
